# rwa-platform

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  RULES.md  TASKS.md
.github/workflows/: frontend-ci.yml
app/: next.config.ts  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/demo/whitelist/: route.ts
app/src/app/assets/[assetId]/: page.tsx
app/src/components/: app-header.tsx  asset-detail-client.tsx  phantom-provider.tsx
app/src/lib/: types.ts
app/src/lib/server/: demo-asset.ts
app/src/lib/solana/: constants.ts  env.ts  errors.ts  format.ts  pdas.ts  rwa-client.ts
contracts/rwa-contracts/: Anchor.toml  package.json
contracts/rwa-contracts/devnet/: README.md  astana-coffee-shop.asset.json  astana-coffee-shop.metadata.json
contracts/rwa-contracts/devnet/documents/: astana-coffee-shop.bundle-manifest.json
contracts/rwa-contracts/programs/rwa-contracts/: Cargo.toml
contracts/rwa-contracts/programs/rwa-contracts/src/: lib.rs
contracts/rwa-contracts/programs/rwa-transfer-hook/: Cargo.toml
contracts/rwa-contracts/programs/rwa-transfer-hook/src/: lib.rs
contracts/rwa-contracts/scripts/: seed-devnet.js  verify-devnet-asset.js
contracts/rwa-contracts/tests/: rwa-contracts.ts
docs/: ARCHITECTURE.md
