[package]
name = "rwa-transfer-hook"
version = "0.1.0"
description = "Transfer hook program for permissioned RWA share tokens"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "=0.32.1", features = ["interface-instructions"] }
spl-tlv-account-resolution = "=0.10.0"
spl-transfer-hook-interface = "=0.10.0"
